k8/filerun/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filerun-deployment
spec:
  selector:
    matchLabels:
      app: filerun-deployment
  template:
    metadata:
      labels:
        app: filerun-deployment
    spec:
      containers:
        - name: filerun-web
          image: filerun/filerun:8.1
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - mountPath: /var/www/html
              name: filerun-html-volume
            - mountPath: /user-files
              name: filerun-user-volume
            - mountPath: /user-files/Electro
              name: filerun-electro-volume

        - name: filerun-db
          image: mariadb:10.1
          ports:
            - name: mysql
              containerPort: 3306
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            allowPrivilegeEscalation: false
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: filerun-db-volume

      volumes:
        - name: filerun-html-volume
          nfs:
            server: 192.168.2.7
            path: /volume1/Containers/apps/filerun/html
        - name: filerun-user-volume
          nfs:
            server: 192.168.2.7
            path: /volume1/Containers/apps/filerun/user-files
        - name: filerun-db-volume
          nfs:
            server: 192.168.2.7
            path: /volume1/Containers/apps/filerun/db
        - name: filerun-electro-volume
          nfs:
            server: 192.168.2.7
            path: /volume1/Electro
