k8/filerun/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filerun-service
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: filerun-deployment
