k8/filerun/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filerun-ingress
spec:
  rules:
  - host: filerun.k8.hiroyagojo.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: filerun-service
            port:
              name: http
